// Vitest Snapshot v1, https://vitest.dev/guide/snapshot.html

exports[`DynamicCanvas > clears widget when clearWidget is called 1`] = `
"<div data-v-4feaa5d4="" class="h-full w-full bg-gray-200 p-6">
  <transition-stub data-v-4feaa5d4="" name="widget-fade" mode="out-in" appear="false" persisted="false" css="true">
    <div data-v-4feaa5d4="" class="h-full flex items-center justify-center bg-white rounded-lg shadow-lg">
      <div data-v-4feaa5d4="" class="text-center text-gray-400"><svg data-v-4feaa5d4="" class="mx-auto h-16 w-16 mb-4" fill="none" stroke="currentColor" viewBox="0 0 24 24">
          <path data-v-4feaa5d4="" stroke-linecap="round" stroke-linejoin="round" stroke-width="2" d="M9 19v-6a2 2 0 00-2-2H5a2 2 0 00-2 2v6a2 2 0 002 2h2a2 2 0 002-2zm0 0V9a2 2 0 012-2h2a2 2 0 012 2v10m-6 0a2 2 0 002 2h2a2 2 0 002-2m0 0V5a2 2 0 012-2h2a2 2 0 012 2v14a2 2 0 01-2 2h-2a2 2 0 01-2-2z"></path>
        </svg>
        <p data-v-4feaa5d4="" class="text-xl font-medium">No widget active</p>
        <p data-v-4feaa5d4="" class="text-sm mt-2">Ask a question to see analytics widgets</p>
      </div>
    </div>
  </transition-stub>
</div>"
`;

exports[`DynamicCanvas > displays widget when activeWidget is set 1`] = `
"<div data-v-4feaa5d4="" class="h-full w-full bg-gray-200 p-6">
  <transition-stub data-v-4feaa5d4="" name="widget-fade" mode="out-in" appear="false" persisted="false" css="true">
    <div data-v-4feaa5d4="" class="h-full">
      <div data-v-4feaa5d4="" class="w-full h-full p-6 bg-white rounded-lg shadow-lg flex flex-col">
        <h2 class="text-2xl font-bold mb-4 text-gray-800">Test Chart</h2>
        <div class="flex-1"><canvas class="w-full h-full"></canvas></div>
      </div>
    </div>
  </transition-stub>
</div>"
`;

exports[`DynamicCanvas > renders KPIList widget with props 1`] = `
"<div data-v-4feaa5d4="" class="h-full w-full bg-gray-200 p-6">
  <transition-stub data-v-4feaa5d4="" name="widget-fade" mode="out-in" appear="false" persisted="false" css="true">
    <div data-v-4feaa5d4="" class="h-full">
      <div data-v-4feaa5d4="" class="w-full h-full p-6 bg-white rounded-lg shadow-lg">
        <h2 class="text-2xl font-bold mb-4 text-gray-800">Key Metrics</h2>
        <div class="overflow-x-auto">
          <table class="min-w-full divide-y divide-gray-200">
            <thead class="bg-gray-50">
              <tr>
                <th class="px-6 py-3 text-left text-xs font-medium text-gray-500 uppercase tracking-wider">metric</th>
                <th class="px-6 py-3 text-left text-xs font-medium text-gray-500 uppercase tracking-wider">value</th>
                <th class="px-6 py-3 text-left text-xs font-medium text-gray-500 uppercase tracking-wider">change</th>
              </tr>
            </thead>
            <tbody class="bg-white divide-y divide-gray-200">
              <tr class="hover:bg-gray-50 transition-colors">
                <td class="px-6 py-4 whitespace-nowrap text-sm text-gray-900">Revenue</td>
                <td class="px-6 py-4 whitespace-nowrap text-sm text-gray-900">125,000</td>
                <td class="px-6 py-4 whitespace-nowrap text-sm text-gray-900">+15%</td>
              </tr>
              <tr class="hover:bg-gray-50 transition-colors">
                <td class="px-6 py-4 whitespace-nowrap text-sm text-gray-900">Users</td>
                <td class="px-6 py-4 whitespace-nowrap text-sm text-gray-900">5,420</td>
                <td class="px-6 py-4 whitespace-nowrap text-sm text-gray-900">+8%</td>
              </tr>
            </tbody>
          </table>
          <!--v-if-->
        </div>
      </div>
    </div>
  </transition-stub>
</div>"
`;

exports[`DynamicCanvas > renders SalesChart widget with props 1`] = `
"<div data-v-4feaa5d4="" class="h-full w-full bg-gray-200 p-6">
  <transition-stub data-v-4feaa5d4="" name="widget-fade" mode="out-in" appear="false" persisted="false" css="true">
    <div data-v-4feaa5d4="" class="h-full">
      <div data-v-4feaa5d4="" class="w-full h-full p-6 bg-white rounded-lg shadow-lg flex flex-col">
        <h2 class="text-2xl font-bold mb-4 text-gray-800">Revenue Chart</h2>
        <div class="flex-1"><canvas class="w-full h-full"></canvas></div>
      </div>
    </div>
  </transition-stub>
</div>"
`;

exports[`DynamicCanvas > renders placeholder when no widget is active 1`] = `
"<div data-v-4feaa5d4="" class="h-full w-full bg-gray-200 p-6">
  <transition-stub data-v-4feaa5d4="" name="widget-fade" mode="out-in" appear="false" persisted="false" css="true">
    <div data-v-4feaa5d4="" class="h-full flex items-center justify-center bg-white rounded-lg shadow-lg">
      <div data-v-4feaa5d4="" class="text-center text-gray-400"><svg data-v-4feaa5d4="" class="mx-auto h-16 w-16 mb-4" fill="none" stroke="currentColor" viewBox="0 0 24 24">
          <path data-v-4feaa5d4="" stroke-linecap="round" stroke-linejoin="round" stroke-width="2" d="M9 19v-6a2 2 0 00-2-2H5a2 2 0 00-2 2v6a2 2 0 002 2h2a2 2 0 002-2zm0 0V9a2 2 0 012-2h2a2 2 0 012 2v10m-6 0a2 2 0 002 2h2a2 2 0 002-2m0 0V5a2 2 0 012-2h2a2 2 0 012 2v14a2 2 0 01-2 2h-2a2 2 0 01-2-2z"></path>
        </svg>
        <p data-v-4feaa5d4="" class="text-xl font-medium">No widget active</p>
        <p data-v-4feaa5d4="" class="text-sm mt-2">Ask a question to see analytics widgets</p>
      </div>
    </div>
  </transition-stub>
</div>"
`;

exports[`DynamicCanvas > updates widget when store activeWidget changes 1`] = `
"<div data-v-4feaa5d4="" class="h-full w-full bg-gray-200 p-6">
  <transition-stub data-v-4feaa5d4="" name="widget-fade" mode="out-in" appear="false" persisted="false" css="true">
    <div data-v-4feaa5d4="" class="h-full">
      <!---->
    </div>
  </transition-stub>
</div>"
`;
